# pdf-table-extractor

./: README.md  pyproject.toml  requirements.txt
pdf_table_extractor/: __init__.py  cli.py  exporter.py  extractor.py
tests/: test_extractor.py
